--- a/ss-front/.eslintrc.json
+++ b/ss-front/.eslintrc.json
@@ -1,3 +1,27 @@
 {
-  "extends": "next/core-web-vitals"
+	"env": {
+		"browser": true,
+		"es6": true,
+		"node": true,
+		"jest": true
+	},
+	"parser": "@typescript-eslint/parser",
+	"parserOptions": {
+		"ecmaFeatures": {
+			"jsx": true
+		},
+		"ecmaVersion": "latest",
+		"sourceType": "module"
+	},
+	"extends": ["next/core-web-vitals", "plugin:prettier/recommended"],
+	"plugins": ["react", "react-hooks", "@typescript-eslint"],
+	"rules": {
+		"semi": ["error", "always"],
+		"no-console": "warn",
+		"quotes": ["error", "double", { "allowTemplateLiterals": true }],
+		"react/react-in-jsx-scope": "off",
+		"prettier/prettier": "error"
+	},
+
+	"ignorePatterns": ["node_modules/*", ".next/*"]
 }
